--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.20.1",
     "react": "16.0.0",
     "react-dom": "16.0.0",
+    "react-emojione": "^5.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
